--- a/style.css
+++ b/style.css
@@ -8,26 +8,56 @@ body {
     font-family: 'Red Hat Text', sans-serif;
 }
 
-
 .product-container {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 .cart-container {
     width: 250px;
     min-height: 350px;
     border-radius: 8px;
+    position: relative;
+}
+
+.add-to-cart {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border: solid 1px;
+    padding: 8px 16px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 14px;
+    width: 60%;
+    position: absolute;
+    bottom: 110px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 10px;
+    z-index: 1;
+    transition: background-color 0.3s ease;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.add-to-cart:hover {
+    background-color: #ffe2da;
+}
+
+.add-to-cart::before {
+    content: "\1F6D2"; /* Shopping cart emoji */
+    margin-right: 5px;
 }
 
 .product-details {
     text-align: left;
+    padding-top: 20px;
 }
 
 .product-name {
     font-size: 0.9rem;
-    font-weight: light;
+    font-weight: 400;
     color: hsl(14, 25%, 72%);
     margin-bottom: 5px;
 }
