--- a/style.css
+++ b/style.css
@@ -6,12 +6,27 @@
 
 body {
     font-family: 'Red Hat Text', sans-serif;
+    background-color: hsl(13, 31%, 94%);
+    margin: 0;
+    padding: 20px;
 }
 
+.container {
+    display: flex;
+    justify-content: space-between;
+}
 .product-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+}
+
+.dessert-heading {
+    font-size: 32px;
+    font-weight: 700;
+    color: #2c2c2c;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .cart-container {
@@ -88,12 +103,37 @@ img {
 .menu-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 20px;
+    gap: 20px;
 }
 
 .confirm-cart {
-    border: 1px solid black;
-    width: 250px;
-    height: 300px;
-    border-radius: 5px;
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    width: 300px;
+    height: 250px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.cart-heading {
+    color: #e44d26;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.empty-cart-icon {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.empty-cart-img{
+    width: 100px;
+    height: auto;
+}
+
+.cart-message {
+    text-align: center;
+    color: #888;
+    font-size: 14px;
 }
