--- a/style.css
+++ b/style.css
@@ -280,3 +280,120 @@ img {
     /* background-color: hsl(14, 86%, 42%); */
     border: 1px solid #e44d26;
 }
+
+
+
+.order-confirmation-popup {
+    position: fixed;
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;
+    width: 100%;
+}
+
+.popup-header {
+    text-align: center;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.popup-header h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.popup-header p {
+    margin-top: 5px;
+}
+
+.checkmark {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.checkmark img {
+    width: 100%;
+    height: 100%;
+}
+
+.order-details {
+    margin-bottom: 20px;
+    background-color: hsl(0, 100%, 98%);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.item-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0;
+    border-bottom: solid 1px hsl(13, 15%, 88%);
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+
+.item-details-inner {
+    display: flex;
+}
+
+.cart-item-name {
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
+
+.cart-item-quantity {
+    margin-right: 10px;
+}
+
+.confirm-item-total {
+    font-weight: bold;
+    color: #2c2c2c;
+}
+
+.order-total {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.text {
+   color: hsl(14, 5%, 72%); 
+   font-weight: 500;
+   font-size: 14px;
+}
+.start-new-order {
+    display: block;
+    width: 100%;
+    padding: 15px 20px;
+    border-radius: 24px;
+    background-color: hsl(14, 86%, 42%);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.start-new-order:hover {
+    background-color: hsl(14, 88%, 29%);
+}
