--- a/style.css
+++ b/style.css
@@ -285,16 +285,23 @@ img {
 
 .order-confirmation-popup {
     position: fixed;
-    top: 0%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    max-width: 400px;
     z-index: 1000;
+    padding: 20px;
+    max-height: 60vh; /* Set a maximum height */
+    overflow-y: auto; /* Enable vertical scroll if content exceeds max-height */
 }
+
+.order-confirmation-popup::-webkit-scrollbar {
+    display: none; /* Hide the scrollbar in WebKit browsers */
+  }
 
 .popup-content {
     background-color: white;
@@ -397,3 +404,4 @@ img {
 .start-new-order:hover {
     background-color: hsl(14, 88%, 29%);
 }
+
